tutorial/curbside-pickup/retail-ops/k8s/deployment.yaml
# Copyright 2025 The Drasi Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-ops
  labels:
    app: retail-ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-ops
  template:
    metadata:
      labels:
        app: retail-ops
    spec:
      containers:
      - name: retail-ops
        image: ghcr.io/drasi-project/learning/curbside-pickup/retail-ops:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: retail-ops
  labels:
    app: retail-ops
spec:
  type: ClusterIP
  selector:
    app: retail-ops
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
