tutorial/curbside-pickup/retail-ops/k8s/postgres-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          args: ["-c", "wal_level=logical"]
          # Resource limits removed for better DevContainer performance
          volumeMounts:
            - name: init
              mountPath: "/docker-entrypoint-initdb.d"
          ports:
            - containerPort: 5432
      volumes:
        - name: init
          configMap:
            name: setup-retail-schema
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
